[package]
name = "chinese-excel-file-processing-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2"
zip = "0.5"
chrono = "0.4"
calamine = "0.17.0"
rust_xlsxwriter = "0.79.4"
actix-cors = "0.7.0"
num_cpus = "1.13.0"
swagger-ui = "0.1.5"
mime_guess = "2.0.5"
actix-files = "0.6.2"
